@@ -3,11 +3,11 @@ package org.irods.jargon.core.connection;
 import java.io.IOException;
 import java.io.InterruptedIOException;
 import java.nio.channels.ClosedChannelException;
+
 import org.globus.common.CoGProperties;
 import org.globus.gsi.gssapi.net.impl.GSIGssInputStream;
 import org.globus.gsi.gssapi.net.impl.GSIGssOutputStream;
 import org.gridforum.jgss.ExtendedGSSManager;
-
 import org.ietf.jgss.GSSContext;
 import org.ietf.jgss.GSSException;
 import org.irods.jargon.core.connection.auth.AuthResponse;
