@@ -17,5 +17,5 @@ test.confirm=true
 									test.resource.group=testResourceGroup
 									test.irods.userDN=test1DN
 									test.irods.scratch.subdir=jargon-scratch
-									test.mac.icommand.path=/opt/iRODS/iRODS_SSL_3.2/trunk/iRODS/clients/icommands/bin/
+									test.mac.icommand.path=/opt/iRODS/iRODS2.5/iRODS/clients/icommands/bin/
 									test.option.exercise.remoteexecstream=true
